# Aether

./: .env.example  .gitignore  AETHER_2.0_PRODUCTION_READINESS_FINAL_REPORT.md  AETHER_FINAL_FIX_REPORT.md  AETHER_FIX_REPORT.md  AETHER_OFFCHAIN_PRODUCTION_READINESS_FINAL_REPORT.md  CHANGELOG.md  CLAUDE.md  COVERAGE_REPORT.md  Cargo.toml  FINAL_COVERAGE_REPORT.md  MINI PROMT.txt  Makefile  PRODUCTION_DEPLOY.md  PROMT 1 RUST.txt  PROMT 2 GO.txt  PROMT CI YML.txt  PROMT FINAL.txt  PROMT FIX.txt  PROMT GO.txt  PROMT META MASK.txt  PROMT RUST.txt  PROMT.txt  README.md  TOKEN.txt  arch-rules.yaml  cov_full.txt  cov_report.txt  db_cover.out  db_new.out  default_12138593706193179507_0_684195.profraw  demo.sh  docker-compose.ci.yml  go.mod  go.sum  grpc_cover.out  tarpaulin-report.json  testutil_new.out  wsl_go_test_filtered.txt
.github/workflows/: architecture-analysis.yml  ci.yml  deploy-docs.yml  deploy.yml  e2e-fullstack.yml  e2e.yml  full-test-suite.yml  metamask-sepolia.yml  offchain-cd.yml  offchain-ci.yml  shadow-mode.yml
.mimocode/plans/: 1781775113814-quick-lagoon.md
cmd/executor/: ab_selector_metrics_test.go  admin_auth_init.go  admin_auth_test.go  admin_rate_limit.go  admin_rate_limit_test.go  admin_server.go  admin_server_test.go  admin_startup_test.go  backrun_metrics.go  backrun_metrics_test.go  backrun_mode.go  backrun_mode_test.go  bootstrap.go  bootstrap_extended_test.go  bootstrap_test.go  bundle.go  bundle_test.go  coverage_boost_v2_test.go  coverage_extended_test.go  coverage_final_test.go  coverage_gap_test.go  coverage_push_test.go  e2e_pipeline_test.go  engine_adapter.go  engine_adapter_test.go  engine_pause_test.go  executor_helpers_test.go  final_coverage_test.go  gas_oracle.go  gas_oracle_test.go  hardening_gap_test.go  inclusion_poll.go  inclusion_poll_block_test.go  inclusion_poll_extended_test.go  inclusion_poll_test.go  integration_test.go  loops_coverage_test.go  main.go  main_coverage_test.go  main_test.go  (+19 more)
cmd/monitor/: alerter.go  alerter_test.go  coverage_boost_final_test.go  coverage_fill_test.go  dashboard.go  dashboard_test.go  main_logic_test.go  metrics.go  metrics_test.go  monitor_coverage_test.go  notifiers.go  notifiers_send_test.go  notifiers_test.go  port_test.go  process.go  process_signal_test.go  production_alerting_test.go  setup.go  setup_exit_test.go  setup_test.go  webhook.go  webhook_test.go
cmd/pooldiscovery/: main.go  main_test.go
cmd/reconciler/: main.go  main_logic_test.go  reconciler_full_coverage_test.go  reconciler_logic_extended_test.go
cmd/risk/: main_logic_test.go  main_test.go  state.go
cmd/signer/: coverage_boost_final_test.go  coverage_boost_test.go  coverage_gap_test.go  main.go  main_logic_test.go  main_test.go  run_serve_test.go
cmd/telebot/: bot.go  bot_extended_test.go  bot_test.go  client.go  client_test.go  coverage_boost_final_test.go  formatter.go  formatter_test.go  main.go  main_test.go  reset_test.go  telebot_coverage_test.go
config/: builders.yaml  discovery.toml  nodes.yaml  pools.toml  production.toml  risk.yaml  signer.yaml
contracts/: .solhint.json  echidna.yaml  foundry.toml  slither.config.json
contracts/script/: Deploy.s.sol
crates/discovery/: Cargo.toml
crates/discovery/src/: cache.rs  config.rs  events.rs  lib.rs  metrics.rs  scorer.rs  service.rs  types.rs  validator.rs  volume.rs
crates/discovery/tests/: balancer_v3_factory_test.rs  coverage_validator.rs  curve_factory_test.rs  events_ws_poll_test.rs  validator_fork_test.rs  validator_revm_unit_test.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: config.rs  event_decoder.rs  lib.rs  mempool.rs  metrics.rs  node_pool.rs  subscription.rs
crates/ingestion/tests/: integration_tests.rs
crates/simulator/: Cargo.toml
crates/simulator/benches/: simulation.rs
crates/simulator/src/: bytecode_cache.rs  calldata.rs  fee_on_transfer.rs  fork.rs  lib.rs  mempool_backrun.rs  post_state_replay.rs  slot_prefetch.rs  v2_reserves_cache.rs
crates/simulator/tests/: bytecode_cache_coverage_test.rs  fee_on_transfer_coverage_test.rs  fee_on_transfer_fork_test.rs  fork_coverage_test.rs  mempool_backrun_coverage_test.rs  mempool_backrun_fork_test.rs  post_state_replay_coverage_test.rs  simulator_coverage_test.rs
crates/state/: Cargo.toml
crates/state/benches/: graph.rs
crates/state/src/: lib.rs  price_graph.rs  snapshot.rs
crates/state/src/hot_cache/: metrics.rs  mod.rs  updater.rs
crates/state/tests/: integration_tests.rs
deploy/: remote-deploy.sh
docs/: AETHER_PRODUCTION_READINESS_REPORT.md  CI_CD_ARCHITECTURE_REPORT.md  COVERAGE_FINAL_REPORT.md  COVERAGE_REPORT.md  FINAL_COVERAGE_REPORT.md  OFFCHAIN_TEST_REPORT.md  PRODUCTION_GUIDE.md  architecture.md  discovery.md  discovery_service.md  e2e_testing.md  go-coverage-report.md  incident-response.md  production-audit-report.md  production_runbook.md  redis_events.md  runbook.md  telegram_dashboard.md  test-coverage-report.md
docs-site/: index.md  package-lock.json  package.json
fuzz/: Cargo.toml  build.rs
fuzz/fuzz_targets/: balancer_math.rs  bellman_ford.rs  config_parse.rs  cp_math.rs  curve_math.rs  discovery_validator.rs  event_decoder.rs  fee_on_transfer.rs  grpc_decode.rs  mempool_backrun.rs  pool_adapter.rs  swap_calldata.rs
migrations/: 0003_mempool_predictions.sql  0004_mempool_reconciliation.sql  0005_mempool_profitability.sql  0006_timescale_setup.sql  0007_create_metrics_table.sql  0008_create_dashboard_views.sql
proto/: aether.proto
scripts/: .cov_loop.sh  arch-analysis.sh  arch-snapshot-compare.py  arch-snapshot.sh  arch-validate.py  backtest.py  coverage_check.sh  diagram-gen.py  e2e-fullstack.mjs  encrypt_key.sh  generate_coverage_report.py  load_test.sh  mempool_backrun_shadow.sh  monitoring_smoke.sh  report-gen.py  report-generator.mjs  run_cov_quick.sh  run_coverage_verify.sh  run_fork_tests.sh  sepolia_test_runner.mjs  shadow_mode_live.sh  test_issue1_references.sh  test_issue5_pool_ownership.sh  test_offchain_report.sh  test_production_hardening.sh  test_replay.sh  validate_factory_coverage.sh  watchdog.sh  workflow-validate.py
(+300 files in other folders)
