[package]
name = "aether-discovery"
version.workspace = true
edition.workspace = true

[dependencies]
aether-common = { path = "../common" }
aether-ingestion = { path = "../ingestion" }
aether-pools = { path = "../pools" }
aether-simulator = { path = "../simulator" }
alloy = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
revm = { workspace = true }
revm-database = { workspace = true }
futures = "0.3"
prometheus = "0.13.4"

[dev-dependencies]
serial_test = { workspace = true }
tempfile = "3.27.0"
tokio = { workspace = true }
url = "2"
mockito = "1.6"
