[package]
name = "aether-ingestion"
version.workspace = true
edition.workspace = true

[dev-dependencies]
serial_test = { workspace = true }

[dependencies]
aether-common = { path = "../common" }
aether-pools = { path = "../pools" }
tokio = { workspace = true }
alloy = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
prometheus = "0.13.4"
async-trait = "0.1"
futures = "0.3"
