[package]
name = "aether-simulator"
version.workspace = true
edition.workspace = true

[dependencies]
aether-common = { path = "../common" }
aether-pools = { path = "../pools" }
alloy = { workspace = true }
revm = { workspace = true }
revm-database = { workspace = true }
tracing = { workspace = true }
ruint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
redb = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
serial_test = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
url = "2"

[[bench]]
name = "simulation"
harness = false
